force-app/main/default/objects/OCE__AccountPlanStakeholder__c/OCE__AccountPlanStakeholder__c.object-meta.xml
<CustomObject>
    <description>Connected Accounts to this Account Plan.</description>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>APS-{0000}</displayFormat>
        <label>Account Plan Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>