force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to parent Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plan Stakeholders</relationshipLabel>
    <relationshipName>AccountPlanStakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>