force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__Department__c.field-meta.xml
<CustomField>
    <fullName>OCE__Department__c</fullName>
    <description>Account Department.</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>