force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__InfluenceType__c.field-meta.xml
<CustomField>
    <fullName>OCE__InfluenceType__c</fullName>
    <description>Influence type of Account</description>
    <label>Influence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influence Type 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>