force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__OfflineUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineUniqueId__c</fullName>
    <description>Globally unique string that identifies an offline created record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Globally unique string that identifies an offline created record.</inlineHelpText>
    <label>Offline Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>