force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__Product__c.field-meta.xml
<CustomField>
    <fullName>OCE__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to parent Product.</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Detail</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__Product__c</referenceTo>
    <relationshipLabel>Account Plan Stakeholders</relationshipLabel>
    <relationshipName>AccountPlanStakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>