force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__Role__c.field-meta.xml
<CustomField>
    <fullName>OCE__Role__c</fullName>
    <description>Role of Account.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>