force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__StakeholderName__c.field-meta.xml
<CustomField>
    <fullName>OCE__StakeholderName__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Name for Non-Profiled Stakeholder</description>
    <label>Stakeholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>