force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__StakeholderNameFormula__c.field-meta.xml
<CustomField>
    <fullName>OCE__StakeholderNameFormula__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Field to show Account.Name if record type is Account, otherwise show StakeholderName</description>
    <formula>IF(  RecordType.DeveloperName = &apos;Account&apos;,  OCE__Account__r.OCE__AccountFullName__c,  OCE__StakeholderName__c )</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>