force-app/main/default/objects/OCE__AccountPlanStakeholder__c/fields/OCE__Strength__c.field-meta.xml
<CustomField>
    <fullName>OCE__Strength__c</fullName>
    <description>Strength of Account.</description>
    <label>Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strength 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>