force-app/main/default/objects/OCE__AccountPlanStakeholder__c/recordTypes/OCE__Account.recordType-meta.xml
<RecordType>
    <fullName>OCE__Account</fullName>
    <active>true</active>
    <label>Account</label>
</RecordType>