force-app/main/default/objects/OCE__AccountPlanStakeholder__c/recordTypes/OCE__NonProfiled.recordType-meta.xml
<RecordType>
    <fullName>OCE__NonProfiled</fullName>
    <active>true</active>
    <label>Non-Profiled</label>
</RecordType>